# isometry

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
crates/isometry-campaign/: Cargo.toml
crates/isometry-campaign/src/: collaboration.rs  fact.rs  faction.rs  generator.rs  item.rs  lib.rs  map.rs  pack.rs  store.rs  world.rs
crates/isometry-core/: Cargo.toml
crates/isometry-core/src/: beat.rs  dice.rs  event.rs  grid.rs  iso.rs  lib.rs  map.rs  narrate.rs  overmap.rs  path.rs  sheet.rs  template.rs  turn.rs  visibility.rs
crates/isometry-genet/: Cargo.toml
crates/isometry-genet/src/: campaign_store.rs  main.rs  net.rs
crates/isometry-graphshell/: Cargo.toml
crates/isometry-graphshell/src/: lib.rs
crates/isometry-net/: Cargo.toml
crates/isometry-net/examples/: session_smoke.rs
crates/isometry-net/src/: campaign_moot.rs  campaign_secrets.rs  campaign_space.rs  campaign_sync.rs  iroh_link.rs  lib.rs  protocol.rs  session.rs  sim.rs
crates/isometry-net/tests/: replication.rs
crates/isometry-serval/: Cargo.toml
crates/isometry-serval/src/: campaign_store.rs  main.rs  net.rs
crates/isometry-system/: Cargo.toml
crates/isometry-system/data/: items.json  monsters.json  spells.json
crates/isometry-system/examples/: generator_fixture.rs  pack_fixture.rs
crates/isometry-system/examples/fixtures/: forge_item.json
crates/isometry-system/examples/packs/core/: isometry-pack.json
crates/isometry-system/examples/packs/core/beats/: cheer.css  dodge.css  fall.css  recoil.css  shrug.css  strike.css  taunt.css
crates/isometry-system/examples/packs/demo/: isometry-pack.json
crates/isometry-system/examples/packs/demo/fixtures/: forge_item.json  local_map.json
crates/isometry-system/examples/packs/demo/generators/: campaign.lua  forge_item.lua  local_map.lua  npc.lua
crates/isometry-system/src/: bestiary.rs  items.rs  lib.rs  pf2e.rs  spells.rs
crates/isometry-views/: Cargo.toml
crates/isometry-views/src/: board.rs  command.rs  compendium.rs  demo.rs  downtime.rs  generator.rs  governance.rs  lib.rs  overmap.rs  panel.rs  projection.rs  sheet.rs  state.rs  storylet.rs  theme.rs  widgets.rs
crates/isometry-voxel/: Cargo.toml
crates/isometry-voxel/src/: bake.rs  demo.rs  lib.rs  png.rs  recipe.rs  vox.rs  voxel.rs
design_docs/: 2026-07-05_isometry_bootstrap_plan.md  2026-07-07_board_to_text_narration_plan.md  2026-07-07_next_horizons_landscape.md  2026-07-07_optional_intelligence_vision.md  2026-07-07_viewport_windowing_and_chrome_plan.md  2026-07-08_campaign_packs_plan.md  2026-07-08_environmental_surfaces_plan.md  2026-07-09_shared_authority_and_collaborative_building_plan.md  2026-07-09_worldbuilding_generation_plan.md  2026-07-14_adjudication_and_representation_plan.md  2026-07-14_gameplay_roadmap_plan.md  2026-07-17_tile_geometry_seam_plan.md  2026-07-18_exploration_mode_plan.md  2026-07-20_perf_and_cambification_plan.md  DOC_POLICY.md  DOC_README.md  PROJECT_DESCRIPTION.md
