[workspace]
resolver = "2"
members = [
    "crates/isometry-core",
    "crates/isometry-campaign",
    "crates/isometry-views",
    "crates/isometry-genet",
    "crates/isometry-net",
    "crates/isometry-system",
    "crates/isometry-voxel",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mark <sgt.mark3@gmail.com>"]
repository = "https://github.com/mark-ik/isometry"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
isometry-core = { path = "crates/isometry-core", version = "0.1.0" }
isometry-campaign = { path = "crates/isometry-campaign", version = "0.1.0" }
isometry-voxel = { path = "crates/isometry-voxel", version = "0.1.0" }
isometry-views = { path = "crates/isometry-views", version = "0.1.0" }
isometry-net = { path = "crates/isometry-net", version = "0.1.0" }
isometry-system = { path = "crates/isometry-system", version = "0.1.0" }

# Persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Portable slots/blobs over a host-chosen backend. Isometry uses its redb
# backend for private desktop campaign state; the future web host can swap
# the backend without changing campaign data.
muniment = { git = "https://github.com/mark-ik/muniment.git", branch = "main" }
codicil = { git = "https://github.com/mark-ik/codicil.git", branch = "main" }
# Host-neutral actor runtime for background host/session work. The SerVal
# application owns its state on the winit thread and drains typed updates.
armillary = { git = "https://github.com/mark-ik/armillary.git", branch = "main" }
personae = { git = "https://github.com/mark-ik/personae.git", branch = "master" }
mooting = { git = "https://github.com/mark-ik/mere.git", branch = "main" }
gemot = { git = "https://github.com/mark-ik/mere.git", branch = "main" }
# mere renamed the package to `mere-transport` (the lib is still `transport`),
# and `[patch]` keys match the *package* name, so both this dep and the local
# override in .cargo/config.toml must say so.
transport = { package = "mere-transport", git = "https://github.com/mark-ik/mere.git", branch = "main" }
murm = { git = "https://github.com/mark-ik/mere.git", branch = "main" }
p2panda-core = "0.6.1"
p2panda-net = "0.6.1"
p2panda-store = { version = "0.6.1", default-features = false }
p2panda-sync = "0.6.1"
thiserror = "1"

# UI: the Genet host stack (I1, the Woodshed pattern). Git deps on the
# owned repos so any machine resolves; local checkouts override via the
# gitignored .cargo/config.toml source-specific [patch] entries. Cambium
# supplies the view toolkit while Genet supplies the engine and host crates.
cambium = "0.2.0"
layout-dom-api = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-scripted-dom = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-layout = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-winit-host = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
netrender = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_api = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_render = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
# wgpu for host-side surface/compose types only; backend features come
# from netrender's own per-target manifest split.
wgpu = { version = "29", default-features = false, features = ["std"] }
winit = "0.30"

# Mirror of genet's [patch.crates-io] entries this workspace's genet
# graph needs; patches are per-workspace-root and do NOT inherit through
# a git dep. Copied from the woodshed root (the maintained model).
[patch.crates-io]
layout-dom-api = { git = "https://github.com/mark-ik/genet.git", branch = "main", version = "=0.1.0" }
genet-scripted-dom = { git = "https://github.com/mark-ik/genet.git", branch = "main", version = "=0.1.0" }
# Only one package in the graph may declare `links = "servo_style_crate"`, so
# stylo_taffy's Stylo and genet-layout's Stylo must be the same package.
#
# This used to be done by patching crates.io `stylo` at the mark-ik fork. That
# stopped working when genet renamed the fork to `genet-stylo` on 2026-07-12
# (genet's T3): `[patch]` cannot rename its target, because the patch source's
# package name must match the registry name it replaces. Genet's answer, which
# this mirrors, is to redirect `stylo_taffy` itself at genet's vendored fork,
# whose own manifest git-deps `genet-stylo` directly. genet-layout resolves the
# same git source, so exactly one Stylo lands. Patching `stylo`/`stylo_atoms`
# here is what *creates* the second copy; do not reintroduce it.
stylo_taffy = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
taffy = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
ipc-channel = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
