[package]
name = "isometry-graphshell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Isometry's product-owned Graphshell projection endpoint."

[dependencies]
graphshell-endpoint = { workspace = true }
graphshell-protocol = { workspace = true }
graphshell-stdio = { workspace = true }
isometry-campaign = { workspace = true }
isometry-core = { workspace = true }
isometry-views = { workspace = true }
sceno = { workspace = true }
scenomise = { workspace = true }
serde_json = { workspace = true }
