[package]
name = "isometry-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Isometry's session layer: DM-authority replication of the SessionEvent log over a transport seam. Pure-sync protocol core; iroh QUIC binding behind the `iroh` feature."

[features]
# The core (protocol + session state machines + in-memory routing) is
# dep-light and always built. The iroh transport pulls the QUIC stack
# and a tokio runtime, so it is opt-in.
default = []
iroh = ["dep:iroh", "dep:iroh-tickets", "dep:tokio", "dep:tracing"]
campaign-p2p = [
    "dep:personae",
    "dep:muniment",
    "dep:mooting",
    "dep:murm-replication",
    "dep:p2panda-core",
    "dep:p2panda-store",
    "dep:thiserror",
]
campaign-p2p-net = [
    "campaign-p2p",
    "dep:transport",
    "dep:p2panda-net",
    "dep:p2panda-sync",
    "dep:tokio",
]
campaign-moot = ["campaign-p2p", "dep:gemot", "dep:tokio"]
campaign-murm = ["dep:murm", "dep:thiserror"]

[dependencies]
isometry-core = { workspace = true }
isometry-campaign = { workspace = true }
codicil = { workspace = true }
serde = { workspace = true }
# Compact, no_std-friendly wire framing; also the byte form the portable
# log hash folds over (so convergence is std-hash-independent).
postcard = { version = "1", features = ["alloc"] }
personae = { workspace = true, optional = true }
muniment = { workspace = true, optional = true }
mooting = { workspace = true, optional = true }
murm-replication = { workspace = true, optional = true }
gemot = { workspace = true, optional = true }
p2panda-core = { workspace = true, optional = true }
p2panda-net = { workspace = true, optional = true }
p2panda-store = { workspace = true, optional = true }
p2panda-sync = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
transport = { workspace = true, optional = true }
murm = { workspace = true, optional = true }

# iroh feature only. iroh 1.0 + tickets 1.0, matching mere-transport so the
# whole graph carries a single iroh (and thus a single ed25519-dalek): the
# 0.98-vs-1.0 split is what wedged the lock via incompatible dalek prereleases.
iroh = { version = "1.0", optional = true }
iroh-tickets = { version = "1.0", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "time"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
isometry-core = { workspace = true }
pollster = "0.4"

[[example]]
name = "session_smoke"
required-features = ["iroh"]
