[package]
name = "isometry-serval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Isometry's serval desktop host: winit window + netrender present over the isometry-views view layer. Bootstrap plan I1."

[dependencies]
isometry-core = { workspace = true }
isometry-campaign = { workspace = true }
isometry-views = { workspace = true }
isometry-net = { workspace = true, features = ["iroh"] }
isometry-system = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
xilem-serval = { workspace = true }
layout-dom-api = { workspace = true }
serval-scripted-dom = { workspace = true }
serval-layout = { workspace = true }
serval-winit-host = { workspace = true }
netrender = { workspace = true }
paint_list_api = { workspace = true }
paint_list_render = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
muniment = { workspace = true, features = ["redb"] }
codicil = { workspace = true }
armillary = { workspace = true }
pollster = "0.4"
# ISOMETRY_CAPTURE_DIR self-capture (headed-verify receipts without
# screen grabs, which lose to overlapping windows).
png = "0.17"
