[package]
name = "isometry-system"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Isometry's system-plugin lane: a game system is a schema plus Lua scripts (via piccolo). Interprets the substrate's SheetData into derived stats and action dice-expressions. Ships the 5e SRD system."

[dependencies]
isometry-core = { workspace = true }
serde = { workspace = true }
# Parses the vendored SRD content packs (data/*.json) at load.
serde_json = { workspace = true }
# Pure-Rust Lua VM: the system-plugin scripting engine, sandboxed
# (no io/os), wasm-friendly, and the tabletop modding lingua franca.
piccolo = "0.3"
