[package]
name = "isometry-views"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Isometry's xilem_serval view layer: board + chrome view fns and the CSS sheets, host-agnostic (desktop and, later, web)."

[dependencies]
isometry-core = { workspace = true }
isometry-net = { workspace = true }
xilem-serval = { workspace = true }
